Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -155,7 +155,7 @@ html {
 
 .main {
     padding-top: 12vh;
-    padding-bottom: 10vh;
+    padding-bottom: 8vh;
     text-align: center;
 }
 
@@ -290,7 +290,7 @@ html {
 }
 
 .info-classroom-last {
-    margin-bottom: 3.6vh;
+    margin-bottom: 4.6vh;
 }
 
 
